tests/negative/symbols/unused_call.orng
fn main() -> Int {
    _ = f()
    f()
    4
}

fn f() -> Int {4}